[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/BugOfWar/BugOfWarController.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Controllers/ClientController.gd" type="Script" id=2]

[node name="ClientController" type="Node2D"]
script = ExtResource( 2 )
bug_of_war_controller = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Home" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="VBoxContainer" parent="CanvasLayer/Home"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -68.0
margin_right = 89.0
margin_bottom = 68.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Home/CenterContainer"]
margin_right = 178.0
margin_bottom = 14.0
text = "Enter Your Name:"

[node name="Name" type="LineEdit" parent="CanvasLayer/Home/CenterContainer"]
margin_top = 18.0
margin_right = 178.0
margin_bottom = 42.0
text = "Swagmaster"

[node name="Label2" type="Label" parent="CanvasLayer/Home/CenterContainer"]
margin_top = 46.0
margin_right = 178.0
margin_bottom = 60.0
text = "Enter the IP:"

[node name="IP" type="LineEdit" parent="CanvasLayer/Home/CenterContainer"]
margin_top = 64.0
margin_right = 178.0
margin_bottom = 88.0
text = "127.0.0.1"

[node name="Connect" type="Button" parent="CanvasLayer/Home/CenterContainer"]
margin_top = 92.0
margin_right = 178.0
margin_bottom = 112.0
text = "Connect"

[node name="Back" type="Button" parent="CanvasLayer/Home/CenterContainer"]
margin_top = 116.0
margin_right = 178.0
margin_bottom = 136.0
text = "Back"

[node name="Lobby" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ReadyToRumble" type="Button" parent="CanvasLayer/Lobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = 229.0
margin_right = 87.0
margin_bottom = 269.0
text = "Ready?"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Lobby"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
margin_left = 130.2
margin_top = -49.0
margin_right = -122.2
margin_bottom = 20.0
alignment = 1

[node name="Team1" type="Button" parent="CanvasLayer/Lobby/HBoxContainer"]
margin_right = 175.0
margin_bottom = 69.0
size_flags_horizontal = 3
text = "Team 1"

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/Lobby/HBoxContainer"]
margin_left = 179.0
margin_right = 183.0
margin_bottom = 69.0

[node name="Team2" type="Button" parent="CanvasLayer/Lobby/HBoxContainer"]
margin_left = 187.0
margin_right = 362.0
margin_bottom = 69.0
size_flags_horizontal = 3
text = "Team 2"

[node name="ControllerHolder" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="pressed" from="CanvasLayer/Home/CenterContainer/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="CanvasLayer/Home/CenterContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CanvasLayer/Lobby/ReadyToRumble" to="." method="_on_ReadyToRumble_pressed"]
[connection signal="pressed" from="CanvasLayer/Lobby/HBoxContainer/Team1" to="." method="_on_Team1_pressed"]
[connection signal="pressed" from="CanvasLayer/Lobby/HBoxContainer/Team2" to="." method="_on_Team2_pressed"]
